解决RPC客户端对象池刷新了空列表连接对象，导致后续对象池创建对象获取不到连线信息的bug